# uttlv

./: .flake8  .gitignore  AUTHORS  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
tests/: conftest.py  test_base_tag.py  test_base_tlv.py  test_basics.py  test_bytes_tag.py  test_bytes_tlv.py  test_int_tag.py  test_iterate.py  test_nested_tags.py  test_parser.py  test_tlv.py  test_tree.py
uttlv/: __init__.py  const.py  encoder.py  error.py  protocol.py  tlv.py
uttlv/tag/: __init__.py  base_tag.py  bytes_tag.py  int_tag.py
uttlv/tlv/: __init__.py  base_tlv.py  bytes_tlv.py  tlv.py
