[tool.poetry]
name = "uttlv"
version = "0.7.0"
description = "Python Library for TLV objects"
authors = ["Fernando Cleber de Souza <cleberdsouza@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4.2"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.6.0"
pre-commit = "^2.20.0"

[tool.black]
line-length = 99
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
