[tool.poetry]
name = "uttlv"
version = "0.7.1"
description = "Python Library for TLV objects"
authors = ["Fernando Cleber de Souza <cleberdsouza@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ustropo/uttlv"
repository = "https://github.com/ustropo/uttlv"
keywords = ["tlv"]
classifiers=[
        # How mature is this project? Common values are
        #   3 - Alpha
        #   4 - Beta
        #   5 - Production/Stable
        "Development Status :: 4 - Beta",
        # Indicate who your project is intended for
        "Intended Audience :: Developers",
        "Topic :: Software Development",
        # Pick your license as you wish (should match "license" above)
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        # Specify the Python versions you support here. In particular, ensure
        # that you indicate whether you support Python 2, Python 3 or both.
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4.2"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.6.0"
pre-commit = "^2.20.0"

[tool.black]
line-length = 99
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
